manifests/order-service-new.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
      version: v3
  template:
    metadata:
      labels:
        app: order-service
        version: v3
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: order-service
        image: ghcr.io/chzbrgr71/aks-store-demo/order-service:3.0.0
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 1m
            memory: 50Mi
          limits:
            cpu: 75m
            memory: 128Mi
