manifests/ingress-store-admin.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: store-admin-gateway-external
  namespace: pets
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "petstore-admin.brianredmond.io"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: store-admin-vs-external
  namespace: pets  
spec:
  hosts:
  - "petstore-admin.brianredmond.io"
  gateways:
  - store-admin-gateway-external
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: store-admin
        port:
          number: 80
