manifests/order-svc-split.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order-service
  namespace: pets
spec:
  hosts:
    - order-service
  http:
  - route:
    - destination:
        host: order-service
        subset: v1
      weight: 70
    - destination:
        host: order-service
        subset: v2
      weight: 30
